// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniversalLink check UniversalLink does not break with error in item 1`] = `
<a
  className={null}
  href="/"
  onClick={[Function]}
  target={null}
  title={null}
>
  <h1>
    Title
  </h1>
</a>
`;

exports[`UniversalLink renders a UniversalLink component if no external(href) link passed 1`] = `
<a
  className={null}
  href="/en/welcome-to-volto"
  onClick={[Function]}
  target={null}
  title={null}
>
  <h1>
    Title
  </h1>
</a>
`;

exports[`UniversalLink renders a UniversalLink component with external link 1`] = `
<a
  className="external"
  href="https://github.com/plone/volto"
  rel="noopener noreferrer"
  target="_blank"
  title={null}
>
  <h1>
    Title
  </h1>
</a>
`;

exports[`UniversalLink renders a UniversalLink component with internal link 1`] = `
<a
  className={null}
  href="/en/welcome-to-volto"
  onClick={[Function]}
  target={null}
  title={null}
>
  <h1>
    Title
  </h1>
</a>
`;

exports[`renders a UniversalLink component when url ends with @@display-file 1`] = `
<a
  className={null}
  href="/en/welcome-to-volto/@@display-file"
  rel="noopener noreferrer"
  target="_blank"
  title={null}
>
  <h1>
    Title
  </h1>
</a>
`;
